--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- header starts -->
         <header class="main-header">
             <div class="logo-container">
-                <img src="..//images/logo.svg" alt="logo not found">
+                <img src="./images/logo.svg" alt="logo not found">
             </div>
             <nav>
                 <ul>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="col-2 col">
-                <img src="..//images/illustration-1.svg" alt="img not found">
+                <img src="./images/illustration-1.svg" alt="img not found">
             </div>
         </div>
         <div class="row-2 row-flex">
@@ -53,16 +53,16 @@
                     Securly share your files and folders with freinds,family and collegues for<br>
                     live collaborations.No email attachement required!
                 </p>
-                <p class="paragraph green-p">see how it works <img src="..//images/icon-arrow.svg" alt="img not found"></p>
+                <p class="paragraph green-p">see how it works <img src="./images/icon-arrow.svg" alt="img not found"></p>
                 <div class="feedback">
-                    <img src="..//images/icon-quotes.svg">
+                    <img src="./images/icon-quotes.svg">
                     <p class="paragraph">Pylo improved our team productivity by<br>
                         an order of magnitude.Since making the<br>
                         switch our team has become a well-oiled<br>
                         collaboration machine.
                     </p>
                     <div class="info-details">
-                        <img src="..//images/avatar-testimonial.jpg" alt="img not found">
+                        <img src="./images/avatar-testimonial.jpg" alt="img not found">
                         <div class="user-info">
                             <p class="paragraph bold-p">Kylie Buriton</p>
                             <p class="paragraph small-p">founder & CEO, huddle</p>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="col-2 col">
-                <img src="..//images/illustration-2.svg" alt="img not found">
+                <img src="./images/illustration-2.svg" alt="img not found">
             </div>
         </div>
         <div class="row-3 row-flex">
@@ -90,7 +90,7 @@
 <!---------------------------------------------footer-------------------------------------->
         <div class="row-4 row-flex">
             <div class="col-1">
-                <img class="img-logo-footer" src="..//images/logo.svg" alt="logo not found">
+                <img class="img-logo-footer" src="./images/logo.svg" alt="logo not found">
                 <i class="fas fa-phone-alt "> phone: +1-543-123-4567</i>
                 <i class="fas fa-envelope-open "> example@gmail.com</i>
             </div>
