--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 <a href="#">Privacy</a>
             </div>
             <div class="col-4">
-                <a href="https:www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https:www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https:www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </div>
